[package]
name = "fansi"
version = "0.1.0"
edition = "2021"

description = "Simple drop-in ansi support for strings printed to the terminal."
authors = [
    "Boston Vanseghi <bvanseg@gmail.com>"
]
repository = "https://github.com/bvanseg/fansi"
documentation = "https://docs.rs/fansi"

license-file = "LICENSE"

readme = "README.md"

keywords = ["ansi", "color", "terminal", "cli", "windows-1252"]
categories = ["command-line-utilities", "cli", "ansi", "terminal"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(target_os="windows")'.dependencies.winapi]
version = "0.3.4"
features = ["consoleapi", "errhandlingapi", "fileapi", "handleapi", "processenv"]